--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "build": "tsc",
     "test": "ava",
-    "test:coverage": "nyc --reporter=text --reporter=lcov ava --timeout=3000",
+    "test:coverage": "nyc --reporter=text --reporter=lcov ava --timeout=15s",
     "format": "prettier --write .",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
