--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "format": "prettier --write .",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
+    "jsexample1": "tsc && node ./examples/example1.js",
+    "tsexample1": "tsc && ts-node ./examples/example1.ts",
     "prepare": "husky install",
     "pre-commit": "lint-staged"
   },
@@ -39,7 +41,7 @@
     "lint-staged": "^12.3.4",
     "nyc": "^15.1.0",
     "prettier": "^2.5.1",
-    "ts-node": "^10.6.0",
+    "ts-node": "^10.7.0",
     "typescript": "4.5"
   },
   "ava": {
