--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,13 @@
 {
-  "extends": [
-    "config:base"
+  "extends": ["config:base"],
+  "rebaseWhen": "auto",
+  "rebaseLabel": "rebase",
+  "rangeStrategy": "bump",
+  "semanticCommits": true,
+  "packageRules": [
+    {
+      "updateTypes": ["minor", "patch", "pin", "digest"],
+      "automerge": true
+    }
   ]
 }
